--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+main {
+  width: 100vw;
+  height: 100vh;
+}
+
+Polyrhythm {
+  width: 100%;
+  height: 100%;
+}
